--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BURP - Blockchain Unified Rebalancing Platform</title>
-    <meta name="description" content="Decentralized AI-powered crypto investment platform with AI-managed thematic baskets, PYUSD settlement, privacy-preserving KYC via Self Protocol, best-execution via 1inch, and price feeds via Pyth Network." />
+    <meta name="description" content="Decentralized AI-powered crypto investment platform with AI-managed thematic baskets, PYUSD settlement, and best-execution via 1inch." />
     <meta name="author" content="BURP Platform" />
+    
+    <!-- Tailwind CDN as backup -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <meta property="og:title" content="BURP - Blockchain Unified Rebalancing Platform" />
-    <meta property="og:description" content="Decentralized AI-powered crypto investment platform with AI-managed thematic baskets, PYUSD settlement, privacy-preserving KYC via Self Protocol, best-execution via 1inch, and price feeds via Pyth Network." />
+    <meta property="og:description" content="Decentralized AI-powered crypto investment platform with AI-managed thematic baskets, PYUSD settlement, and best-execution via 1inch." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@burp_platform" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
