--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,24 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BURP - Blockchain Unified Rebalancing Platform</title>
-    <meta name="description" content="Decentralized AI-powered crypto investment platform with AI-managed thematic baskets, PYUSD settlement, and best-execution via 1inch." />
-    <meta name="author" content="BURP Platform" />
-    
-    <!-- Tailwind CDN as backup -->
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BURP - Blockchain Unified Rebalancing Platform</title>
+  <meta name="description" content="Decentralized AI-powered crypto investment platform with AI-managed thematic baskets, PYUSD settlement, and best-execution via 1inch." />
+  <meta name="author" content="BURP Platform" />
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='40' fill='blue' /%3E%3C/svg%3E" />
 
-    <meta property="og:title" content="BURP - Blockchain Unified Rebalancing Platform" />
-    <meta property="og:description" content="Decentralized AI-powered crypto investment platform with AI-managed thematic baskets, PYUSD settlement, and best-execution via 1inch." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Tailwind CDN as backup -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@burp_platform" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="BURP - Blockchain Unified Rebalancing Platform" />
+  <meta property="og:description" content="Decentralized AI-powered crypto investment platform with AI-managed thematic baskets, PYUSD settlement, and best-execution via 1inch." />
+  <meta property="og:type" content="website" />
+</head>
+
 
   <body>
     <div id="root"></div>
